--- a/전처리.ipynb
+++ b/전처리.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5057,7 +5057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -5137,7 +5137,7 @@
        "2  37.237800  127.213239  "
       ]
      },
-     "execution_count": 299,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5149,7 +5149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -5179,7 +5179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -5259,7 +5259,7 @@
        "2  37.237800  127.213239  "
       ]
      },
-     "execution_count": 301,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5271,7 +5271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -5355,7 +5355,7 @@
        "2  37.237800  127.213239  폐기물처리업체  "
       ]
      },
-     "execution_count": 302,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5367,7 +5367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -5452,7 +5452,7 @@
        "4   ㈜한우리환경  경기도 용인시 기흥구 신정로151번길 11-19  37.283846  127.099769  폐기물처리업체"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5464,7 +5464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8756,7 +8756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -8877,7 +8877,7 @@
        "2  37.321428  127.109192      의원  209639.5300  424432.1500      의원   70.00  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8889,7 +8889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -8928,7 +8928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -8937,7 +8937,7 @@
        "['경기도 용인시 기흥구 죽전로15번길 11-15 ', '보정동)']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8948,18 +8948,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_9000\\1937752611.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_12752\\1363827212.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  hospital['도로명'][i] = hospital['소재지도로명주소'].str.split('(')[i][0].rstrip()\n"
+      "  hospital['도로명'][i] = hospital['소재지도로명주소'].str.split('(')[i][0].split(',')[0].rstrip()\n"
      ]
     },
     {
@@ -9089,7 +9089,7 @@
        "2  경기도 용인시 기흥구 죽전로15번길 11-15  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9097,13 +9097,13 @@
    "source": [
     "hospital['도로명'] = 0\n",
     "for i in range(len(hospital)):\n",
-    "    hospital['도로명'][i] = hospital['소재지도로명주소'].str.split('(')[i][0].rstrip()\n",
+    "    hospital['도로명'][i] = hospital['소재지도로명주소'].str.split('(')[i][0].split(',')[0].rstrip()\n",
     "hospital.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -9233,7 +9233,7 @@
        "2  경기도 용인시 기흥구 죽전로15번길 11-15  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9245,7 +9245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -9379,7 +9379,7 @@
        "2  경기도 용인시 기흥구 죽전로15번길 11-15   의원  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9391,7 +9391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -9463,7 +9463,7 @@
        "2   의원  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9475,7 +9475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -9617,7 +9617,7 @@
        "[329 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9629,7 +9629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -9680,7 +9680,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>365일이가편한연세치과의원</td>\n",
-       "      <td>경기도 용인시 기흥구 마북로 164, 203호</td>\n",
+       "      <td>경기도 용인시 기흥구 마북로 164</td>\n",
        "      <td>37.303963</td>\n",
        "      <td>127.124309</td>\n",
        "      <td>의원</td>\n",
@@ -9693,10 +9693,10 @@
        "             소재지명                        도로명         위도          경도 시설구분\n",
        "2        24까페거리의원  경기도 용인시 기흥구 죽전로15번길 11-15  37.321428  127.109192   의원\n",
        "3  365일이가편한연세치과의원   경기도 용인시 기흥구 마북로 126 204호  37.301486  127.121684   의원\n",
-       "4  365일이가편한연세치과의원  경기도 용인시 기흥구 마북로 164, 203호  37.303963  127.124309   의원"
+       "4  365일이가편한연세치과의원        경기도 용인시 기흥구 마북로 164  37.303963  127.124309   의원"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9708,7 +9708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -10045,7 +10045,7 @@
        " '경기 용인시 수지구 성복2로 51']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10061,7 +10061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10079,7 +10079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10093,7 +10093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -10160,7 +10160,7 @@
        "8              365화이팅한의원        경기 용인시 기흥구 기흥역로 63   0.000000    0.000000   의원"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10173,7 +10173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -10224,7 +10224,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>365일이가편한연세치과의원</td>\n",
-       "      <td>경기도 용인시 기흥구 마북로 164, 203호</td>\n",
+       "      <td>경기도 용인시 기흥구 마북로 164</td>\n",
        "      <td>37.303963</td>\n",
        "      <td>127.124309</td>\n",
        "      <td>의원</td>\n",
@@ -10232,7 +10232,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>365튼튼연합의원</td>\n",
-       "      <td>경기도 용인시 수지구 만현로 82-4, 404호</td>\n",
+       "      <td>경기도 용인시 수지구 만현로 82-4</td>\n",
        "      <td>37.309427</td>\n",
        "      <td>127.085769</td>\n",
        "      <td>의원</td>\n",
@@ -10240,7 +10240,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>365플러스이비인후과의원</td>\n",
-       "      <td>경기도 용인시 기흥구 죽전로 53, 404호</td>\n",
+       "      <td>경기도 용인시 기흥구 죽전로 53</td>\n",
        "      <td>37.320676</td>\n",
        "      <td>127.114606</td>\n",
        "      <td>의원</td>\n",
@@ -10299,23 +10299,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                소재지명                         도로명         위도          경도 시설구분\n",
-       "2           24까페거리의원   경기도 용인시 기흥구 죽전로15번길 11-15  37.321428  127.109192   의원\n",
-       "3     365일이가편한연세치과의원    경기도 용인시 기흥구 마북로 126 204호  37.301486  127.121684   의원\n",
-       "4     365일이가편한연세치과의원   경기도 용인시 기흥구 마북로 164, 203호  37.303963  127.124309   의원\n",
-       "5          365튼튼연합의원  경기도 용인시 수지구 만현로 82-4, 404호  37.309427  127.085769   의원\n",
-       "6      365플러스이비인후과의원    경기도 용인시 기흥구 죽전로 53, 404호  37.320676  127.114606   의원\n",
-       "...              ...                         ...        ...         ...  ...\n",
-       "1635          호미당한의원       경기 용인시 기흥구 새천년로26번길 6  37.287711  127.112319   의원\n",
-       "1636          호부부한의원           경기 용인시 기흥구 금화로 92   0.000000    0.000000   의원\n",
-       "1639       홍승환정형외과의원           경기 용인시 기흥구 구갈로 74  37.276850  127.111252   의원\n",
-       "1645           화인한의원          경기 용인시 수지구 수풍로 107  37.330432  127.094454   의원\n",
-       "1656            힐링의원          경기 용인시 수지구 성복2로 51  37.319507  127.059875   의원\n",
+       "                소재지명                        도로명         위도          경도 시설구분\n",
+       "2           24까페거리의원  경기도 용인시 기흥구 죽전로15번길 11-15  37.321428  127.109192   의원\n",
+       "3     365일이가편한연세치과의원   경기도 용인시 기흥구 마북로 126 204호  37.301486  127.121684   의원\n",
+       "4     365일이가편한연세치과의원        경기도 용인시 기흥구 마북로 164  37.303963  127.124309   의원\n",
+       "5          365튼튼연합의원       경기도 용인시 수지구 만현로 82-4  37.309427  127.085769   의원\n",
+       "6      365플러스이비인후과의원         경기도 용인시 기흥구 죽전로 53  37.320676  127.114606   의원\n",
+       "...              ...                        ...        ...         ...  ...\n",
+       "1635          호미당한의원      경기 용인시 기흥구 새천년로26번길 6  37.287711  127.112319   의원\n",
+       "1636          호부부한의원          경기 용인시 기흥구 금화로 92   0.000000    0.000000   의원\n",
+       "1639       홍승환정형외과의원          경기 용인시 기흥구 구갈로 74  37.276850  127.111252   의원\n",
+       "1645           화인한의원         경기 용인시 수지구 수풍로 107  37.330432  127.094454   의원\n",
+       "1656            힐링의원         경기 용인시 수지구 성복2로 51  37.319507  127.059875   의원\n",
        "\n",
        "[1657 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10327,7 +10327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
