--- a/관공서 가중치_re.ipynb
+++ b/관공서 가중치_re.ipynb
@@ -1430,6 +1430,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all_5.to_csv('./res/관공서가중치BEST5.csv')"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
