--- a/숙박 가중치.ipynb
+++ b/숙박 가중치.ipynb
@@ -5111,12 +5111,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "34858fb4650e4f08c5273abdf3b94d08eabaf2da6ad278d4e34e857f9bde1bd0"
+    "hash": "c7170b7ee6708661ed835cd60cacdd96c366b464f94adf212dd1694d225056e8"
    }
   }
  },
