--- a/숙박가중치_re.ipynb
+++ b/숙박가중치_re.ipynb
@@ -2,11 +2,122 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cell_id</th>\n",
+       "      <th>cell_xcrd</th>\n",
+       "      <th>cell_ycrd</th>\n",
+       "      <th>overlap</th>\n",
+       "      <th>person_cnt</th>\n",
+       "      <th>best_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>86503006</td>\n",
+       "      <td>127.165240</td>\n",
+       "      <td>37.284084</td>\n",
+       "      <td>3</td>\n",
+       "      <td>255.975</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>86374994</td>\n",
+       "      <td>127.160760</td>\n",
+       "      <td>37.275060</td>\n",
+       "      <td>2</td>\n",
+       "      <td>174.924</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>83511270</td>\n",
+       "      <td>127.059555</td>\n",
+       "      <td>37.318443</td>\n",
+       "      <td>3</td>\n",
+       "      <td>162.099</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>85047108</td>\n",
+       "      <td>127.113884</td>\n",
+       "      <td>37.288887</td>\n",
+       "      <td>1</td>\n",
+       "      <td>156.700</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>84471258</td>\n",
+       "      <td>127.093300</td>\n",
+       "      <td>37.340195</td>\n",
+       "      <td>3</td>\n",
+       "      <td>150.741</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    cell_id   cell_xcrd  cell_ycrd  overlap  person_cnt  best_score\n",
+       "0  86503006  127.165240  37.284084        3     255.975           5\n",
+       "1  86374994  127.160760  37.275060        2     174.924           5\n",
+       "2  83511270  127.059555  37.318443        3     162.099           5\n",
+       "3  85047108  127.113884  37.288887        1     156.700           5\n",
+       "4  84471258  127.093300  37.340195        3     150.741           5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best = pd.read_csv('data/best_score.csv', index_col=0)\n",
+    "best.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Best 5점"
    ]
   },
   {
@@ -108,124 +219,13 @@
     }
    ],
    "source": [
-    "best = pd.read_csv('data/best_score.csv', index_col=0)\n",
-    "best.head()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Best 5점"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cell_id</th>\n",
-       "      <th>cell_xcrd</th>\n",
-       "      <th>cell_ycrd</th>\n",
-       "      <th>overlap</th>\n",
-       "      <th>person_cnt</th>\n",
-       "      <th>best_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>86503006</td>\n",
-       "      <td>127.165240</td>\n",
-       "      <td>37.284084</td>\n",
-       "      <td>3</td>\n",
-       "      <td>255.975</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>86374994</td>\n",
-       "      <td>127.160760</td>\n",
-       "      <td>37.275060</td>\n",
-       "      <td>2</td>\n",
-       "      <td>174.924</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>83511270</td>\n",
-       "      <td>127.059555</td>\n",
-       "      <td>37.318443</td>\n",
-       "      <td>3</td>\n",
-       "      <td>162.099</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>85047108</td>\n",
-       "      <td>127.113884</td>\n",
-       "      <td>37.288887</td>\n",
-       "      <td>1</td>\n",
-       "      <td>156.700</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>84471258</td>\n",
-       "      <td>127.093300</td>\n",
-       "      <td>37.340195</td>\n",
-       "      <td>3</td>\n",
-       "      <td>150.741</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    cell_id   cell_xcrd  cell_ycrd  overlap  person_cnt  best_score\n",
-       "0  86503006  127.165240  37.284084        3     255.975           5\n",
-       "1  86374994  127.160760  37.275060        2     174.924           5\n",
-       "2  83511270  127.059555  37.318443        3     162.099           5\n",
-       "3  85047108  127.113884  37.288887        1     156.700           5\n",
-       "4  84471258  127.093300  37.340195        3     150.741           5"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "best_5 = best[best['best_score'] == 5]\n",
     "best_5.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "4  84471258  37.340195  127.093300"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
        " 83751250: [37.31622, 127.06803]}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "[204 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
        "[204 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,14 +929,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\차선영\\AppData\\Local\\Temp\\ipykernel_17272\\2482150549.py:1: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
+      "C:\\Users\\hyunjung\\AppData\\Local\\Temp\\ipykernel_20304\\2482150549.py:1: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  hotel_best_dict = hotel_best.set_index(['소재지명']).T.to_dict('list')\n"
      ]
     },
@@ -1144,7 +1144,7 @@
        " '호텔스위스': [37.2984622, 127.2204565]}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
        "[62685 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1462,7 @@
        "[72 rows x 4 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1787,7 @@
        "45        호텔주노       5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1797,6 +1797,15 @@
     "df_all_5 = df_all_5.reset_index()\n",
     "df_all_5 = df_all_5.rename(columns={'score' : '5_score'})\n",
     "df_all_5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all_5.to_csv('./res/숙박가중치BEST5.csv')"
    ]
   },
   {
@@ -7346,7 +7355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.9 64-bit (microsoft store)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -7360,12 +7369,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "edfa25e5c84106d6ad42616580007c315547a0b0c45cb3a40e63059d8215f85b"
+    "hash": "cb788d25dd4bc375f0823b1bd404bcba262b435141b11d4ee493faee95714e41"
    }
   }
  },
