--- a/최종가중치.ipynb
+++ b/최종가중치.ipynb
@@ -1286,7 +1286,7 @@
    ],
    "source": [
     "# 아파트 주차장\n",
-    "aptP = pd.read_csv(r'C:\\Users\\admin\\Desktop\\electric_charging_hj\\res\\아파트주차장.csv', index_col=0)\n",
+    "aptP = pd.read_csv('C:\\Users\\admin\\Desktop\\electric_charging_hj\\res\\아파트주차장.csv', index_col=0)\n",
     "aptP.head()"
    ]
   },
@@ -1618,7 +1618,7 @@
     }
    ],
    "source": [
-    "aptP_df = pd.read_csv(r'C:\\Users\\admin\\Desktop\\electric_charging_hj\\res\\아파트주차장점수.csv', index_col=0)\n",
+    "aptP_df = pd.read_csv('C:\\Users\\admin\\Desktop\\electric_charging_hj\\res\\아파트주차장점수.csv', index_col=0)\n",
     "aptP_df"
    ]
   },
@@ -3207,12 +3207,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8bf0d51478355d2251941b3b98616086516a0eddd7c72ee47a3371765770709a"
+    "hash": "c7170b7ee6708661ed835cd60cacdd96c366b464f94adf212dd1694d225056e8"
    }
   }
  },
